# OmniVoice

./: .dockerignore  AGENTS.md  CLAUDE.md  api.py  pyproject.toml  speaker_embedding.py
.github/workflows/: docker-hub-gpu.yml
docker/: Dockerfile.gpu  Dockerfile.vast  Dockerfile.vast.patch  entrypoint.sh
docs/: omnivoice_vast_ai_api_zh.md  vast_ai_gpu_service_runbook_zh.md
omnivoice/models/: omnivoice.py
omnivoice/utils/: audio.py
scripts/: vast.py
tests/: test_api_text_qc.py  test_audio_separator_model.py  test_pyannote_diarize.py  test_reference_identity_qc.py  test_speaker_compare_backend.py
voxcpm/: __init__.py  core.py
voxcpm/model/: voxcpm2.py
voxcpm/modules/minicpm4/: cache.py  model.py
