[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnivoice"
version = "0.1.5"
description = "OmniVoice: Towards Omnilingual Zero-Shot Text-to-Speech with Diffusion Language Models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Han Zhu"}]
keywords = [
    "tts",
    "text-to-speech",
    "speech-synthesis",
    "zero-shot",
    "multilingual",
    "diffusion",
    "voice-cloning",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "transformers>=5.14.1",
    "accelerate",
    "pydub",
    "gradio",
    "tensorboardX",
    "webdataset",
    "numpy",
    "soundfile",
    "librosa",
    "aiohttp",
    "audio-separator>=0.44.1",
    "faster-whisper>=1.1",
    # Qwen3-ASR forced-aligner tokenizers: Japanese uses nagisa, Korean soynlp.
    "nagisa",
    "soynlp",
    # Optional speaker diarization on the transcribe endpoint (diarize=true).
    "pyannote.audio",
    "onnxruntime>=1.22; sys_platform != 'linux' and sys_platform != 'win32'",
    "onnxruntime-gpu>=1.22,<1.23; sys_platform == 'linux' or sys_platform == 'win32'",
    # Vendored VoxCPM2 inference (voxcpm/) top-level imports. These are already
    # pulled in transitively by transformers/audio-separator; listed explicitly
    # so the vendored package's imports resolve without the heavy voxcpm pip pkg.
    "einops",
    "pydantic",
    "tqdm",
    "safetensors",
    "huggingface-hub",
    # VoxCPM2 quality helpers: text normalization (numbers/dates/etc.) and
    # ZipEnhancer denoising of reference/prompt audio. simplejson and
    # sortedcontainers are implicit runtime dependencies of modelscope's config
    # loader.
    "wetext",
    "inflect",
    "modelscope",
    "addict>=2.4.0",
    "datasets>=5.0.0",
    "simplejson",
    "sortedcontainers",
]

[project.optional-dependencies]

eval = [
    "jiwer==3.1.0",       # WER
    "s3prl",               # Speech representation (HuBERT etc.)
    "funasr",              # ASR models
    "zhconv",              # Chinese character normalization
    "zhon",                # Chinese punctuation
    "unidecode",            # Unicode normalization
]

[project.scripts]
omnivoice-infer = "omnivoice.cli.infer:main"
omnivoice-infer-batch = "omnivoice.cli.infer_batch:main"
omnivoice-demo = "omnivoice.cli.demo:main"

[project.urls]
Homepage = "https://github.com/k2-fsa/OmniVoice"
Repository = "https://github.com/k2-fsa/OmniVoice"
"Bug Tracker" = "https://github.com/k2-fsa/OmniVoice/issues"

[tool.uv.sources]
# Install PyTorch with CUDA support on Linux/Windows (CUDA doesn't exist for Mac).
# NOTE: We must explicitly request them as `dependencies` above. These improved
# versions will not be selected if they're only third-party dependencies.
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
# Use PyTorch built for NVIDIA Toolkit version 12.6.
# cu126 (not cu128) so the env can also host paddlepaddle-gpu 3.0.0, which
# ships cu118/cu126 wheels but no cu128 wheel — required to coexist with
# video-subtitle-remover. Available versions: https://pytorch.org/get-started/locally/
url = "https://download.pytorch.org/whl/cu126"
# Only use this index when explicitly requested by `tool.uv.sources`.
explicit = true

[tool.uv]
constraint-dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    # torchcodec 0.8+ requires torch>=2.9; 0.7 is the newest release
    # compatible with torch 2.8 (pyannote.audio needs torchcodec>=0.7).
    "torchcodec==0.7.0",
]

[tool.hatch.build.targets.sdist]
include = ["omnivoice"]

[tool.hatch.build.targets.wheel]
packages = ["omnivoice"]
